add part category

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -756,5 +756,6 @@
     "Tasks List": "Liste des tâches",
     "Done": "Effectuée",
     "To do": "A faire",
-    "Show": "Voir"
+    "Show": "Voir",
+    "Create a category": "Créer une catégorie"
 }
