--- a/lang/fr.json
+++ b/lang/fr.json
@@ -757,5 +757,6 @@
     "Done": "Effectuée",
     "To do": "A faire",
     "Show": "Voir",
-    "Create a category": "Créer une catégorie"
+    "Create a category": "Créer une catégorie",
+    "Categories List": "Liste des catégories"
 }
