update design homepage

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -758,5 +758,6 @@
     "To do": "A faire",
     "Show": "Voir",
     "Create a category": "Créer une catégorie",
-    "Categories List": "Liste des catégories"
+    "Categories List": "Liste des catégories",
+    "Theme List" : "Liste des thèmes"
 }
