--- a/lang/fr.json
+++ b/lang/fr.json
@@ -763,5 +763,6 @@
     "Show": "Voir",
     "Create a category": "Créer une catégorie",
     "Categories lists": "Listes des catégories",
-    "Theme List" : "Liste des thèmes"
+    "Theme List" : "Liste des thèmes",
+    "My account" : "Mon compte"
 }
